# redis-bike-co

./: .gitignore  LICENSE  README.md  app.py  data_loader.py  docker-compose.yml  env.example  pyproject.toml
data/: bike_data.json  store_data.json
ipynb/: README.md  redis-vss.css  redis-vss.ipynb
redisinsight/: manifest.json
redisinsight/redis-bike-co/: managing_json.md  querying_json.md
