# pyproject.toml

[tool.poetry]
name = "redis-bike-co"
version = "0.0.1"
description = "Redis Bike Company Demo Application"
authors = ["Simon Prickett <simon@redis.com>", "Brian Sam-Bodden <bsb@redis.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.5.5"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
rise = "^5.7.1"
pandas = "^2.0.2"
sentence-transformers = "^2.2.2"
matplotlib = "^3.7.1"
ipympl = "^0.9.3"
hide-code = "^0.7.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

